added result display

--- a/style.css
+++ b/style.css
@@ -70,3 +70,8 @@
     color: black;
     background-color: cornsilk;
 }
+
+.result_section{
+    background-color: blanchedalmond;
+    height: 1.1rem;
+}
